--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -120,14 +120,14 @@
                     </li>
                     <li class="upper-links dropdown"><a class="links" href="">Safety Equipments</a>
                         <ul class="dropdown-menu">
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a>
+                            <li class="profile-li"><a class="profile-links" href="">Safety Shoes</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Safety Gloves</a>
                             </li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Eye Protection</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Safety Helmet</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Fall Protection</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Fire Protection</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Respiratory Protection</a></li>
                         </ul>
                     </li>
                     <li class="upper-links">
@@ -138,18 +138,6 @@
                                     fill="#fff"></path>
                             </svg>
                         </a>
-                    </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Dropdown</a>
-                        <ul class="dropdown-menu">
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a>
-                            </li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                        </ul>
                     </li>
                 </ul>
             </div>
