--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -96,26 +96,21 @@
                     </li>
                     <li class="upper-links dropdown"><a class="links" href="">Pantry Supplies</a>
                         <ul class="dropdown-menu">
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a>
+                            <li class="profile-li"><a class="profile-links" href="">Biscuits</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Beverages</a>
                             </li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Cooking</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Foodgrains</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Snacks</a></li>
                         </ul>
                     </li>
                     <li class="upper-links dropdown"><a class="links" href="">Power Tools</a>
                         <ul class="dropdown-menu">
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a>
+                            <li class="profile-li"><a class="profile-links" href="">Blowers</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Drills</a>
                             </li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
-                            <li class="profile-li"><a class="profile-links" href="">Link</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Power Drills</a></li>
+                            <li class="profile-li"><a class="profile-links" href="">Hammers</a></li>
                         </ul>
                     </li>
                     <li class="upper-links dropdown"><a class="links" href="">Safety Equipments</a>
