--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -181,11 +181,11 @@
     <!-- Swiper -->
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="images/1.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="images/2.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="images/3.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="images/4.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="images/5.jpg" alt=""></div>
+            <div class="swiper-slide" style="background-image: url(images/1.jpg); background-size: cover; background-repeat: no-repeat;"></div>
+            <div class="swiper-slide" style="background-image: url(images/2.jpg); background-size: cover; background-repeat: no-repeat;"></div>
+            <div class="swiper-slide" style="background-image: url(images/3.jpg); background-size: cover; background-repeat: no-repeat;"></div>
+            <div class="swiper-slide" style="background-image: url(images/4.jpg); background-size: cover; background-repeat: no-repeat;"></div>
+            <div class="swiper-slide" style="background-image: url(images/5.jpg); background-size: cover; background-repeat: no-repeat;"></div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
@@ -198,8 +198,8 @@
     <div class="photo-gallery background">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">check out some Indian Brands</h2>
-                <p class="text-center" style="margin-bottom: 5%;">Presenting to you the stalls of some of the best Atmanirbhar Indian Brands!</p>
+                <h2 class="text-center" style="font-size: 50px;">check out some Indian Brands</h2>
+                <p class="text-center" style="margin-bottom: 5%;" style="font-size: 30px;">Presenting to you the stalls of some of the best Atmanirbhar Indian Brands!</p>
             </div>
             <div class="row photos">
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
