--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -301,6 +301,44 @@
             </div>
         </div>
     </div>
+    <div class="row" style="padding: 50px;">
+        <div class="col-lg-3">
+            <div class="card">
+                <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%;">
+                <h1>Tailored Jeans</h1>
+                <p class="price">$19.99</p>
+                <p>Some text about the jeans..</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="card">
+                <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%">
+                <h1>Tailored Jeans</h1>
+                <p class="price">$19.99</p>
+                <p>Some text about the jeans..</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="card">
+                <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%">
+                <h1>Tailored Jeans</h1>
+                <p class="price">$19.99</p>
+                <p>Some text about the jeans..</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="card">
+                <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%">
+                <h1>Tailored Jeans</h1>
+                <p class="price">$19.99</p>
+                <p>Some text about the jeans..</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+        </div>
+    </div>
 
     <!-- <div class="spportal">
         <a href="https://www.subtlepixeldesigns.in">
