--- a/hackathon/india.html
+++ b/hackathon/india.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row row1">
                 <ul class="largenav pull-right">
-                    <li class="upper-links dropdown"><a class="links" href="">Office Supplies</a>
+                    <li class="upper-links dropdown"><a class="links" href="" style="text-transform: uppercase;">Office Supplies</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Office Machines</a></li>
                             <li class="profile-li"><a class="profile-links" href="">A4 & Photocopier Paper</a>
@@ -70,7 +70,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Tapes</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Corporate Gifts</a>
+                    <li class="upper-links dropdown"><a class="links" href="" style="text-transform: uppercase;">Corporate Gifts</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Apparel</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Movie</a>
@@ -82,7 +82,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Watches</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Cleaning Supplies</a>
+                    <li class="upper-links dropdown"><a class="links" href="" style="text-transform: uppercase;">Cleaning Supplies</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Brooms</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Misc.</a>
@@ -94,7 +94,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Hand Care</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Pantry Supplies</a>
+                    <li class="upper-links dropdown"><a class="links" href="" style="text-transform: uppercase;">Pantry Supplies</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Biscuits</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Beverages</a>
@@ -104,7 +104,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Snacks</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Power Tools</a>
+                    <li class="upper-links dropdown"><a class="links" href="" style="text-transform: uppercase;">Power Tools</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Blowers</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Drills</a>
@@ -113,7 +113,7 @@
                             <li class="profile-li"><a class="profile-links" href="">Hammers</a></li>
                         </ul>
                     </li>
-                    <li class="upper-links dropdown"><a class="links" href="">Safety Equipments</a>
+                    <li class="upper-links dropdown"><a class="links" href="" style="text-transform: uppercase;">Safety Equipments</a>
                         <ul class="dropdown-menu">
                             <li class="profile-li"><a class="profile-links" href="">Safety Shoes</a></li>
                             <li class="profile-li"><a class="profile-links" href="">Safety Gloves</a>
@@ -139,7 +139,8 @@
             <div class="row row2">
                 <div class="col-sm-2">
                     <h2 style="margin:0px;"><span class="smallnav menu" onclick="openNav()">☰ Brand</span></h2>
-                    <h1 style="margin:0px;"><span class="largenav"><img src="images/ShakeDeal Text.png" style="width: 150px;" alt=""></span></h1>
+                    <h1 style="margin:0px;"><span class="largenav"><img src="images/ShakeDeal Text.png"
+                                style="width: 150px;" alt=""></span></h1>
                 </div>
                 <div class="flipkart-navbar-search smallsearch col-sm-8 col-xs-11">
                     <div class="row">
@@ -160,7 +161,7 @@
                             <path
                                 d="M15.32 2.405H4.887C3 2.405 2.46.805 2.46.805L2.257.21C2.208.085 2.083 0 1.946 0H.336C.1 0-.064.24.024.46l.644 1.945L3.11 9.767c.047.137.175.23.32.23h8.418l-.493 1.958H3.768l.002.003c-.017 0-.033-.003-.05-.003-1.06 0-1.92.86-1.92 1.92s.86 1.92 1.92 1.92c.99 0 1.805-.75 1.91-1.712l5.55.076c.12.922.91 1.636 1.867 1.636 1.04 0 1.885-.844 1.885-1.885 0-.866-.584-1.593-1.38-1.814l2.423-8.832c.12-.433-.206-.86-.655-.86 "
                                 fill="#fff "></path>
-                        </svg> Link
+                        </svg> Cart
                         <span class="item-number ">0</span>
                     </a>
                 </div>
@@ -181,11 +182,21 @@
     <!-- Swiper -->
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" style="background-image: url(images/1.jpg); background-size: cover; background-repeat: no-repeat;"></div>
-            <div class="swiper-slide" style="background-image: url(images/2.jpg); background-size: cover; background-repeat: no-repeat;"></div>
-            <div class="swiper-slide" style="background-image: url(images/3.jpg); background-size: cover; background-repeat: no-repeat;"></div>
-            <div class="swiper-slide" style="background-image: url(images/4.jpg); background-size: cover; background-repeat: no-repeat;"></div>
-            <div class="swiper-slide" style="background-image: url(images/5.jpg); background-size: cover; background-repeat: no-repeat;"></div>
+            <div class="swiper-slide"
+                style="background-image: url(images/1.jpg); background-size: cover; background-repeat: no-repeat;">
+            </div>
+            <div class="swiper-slide"
+                style="background-image: url(images/2.jpg); background-size: cover; background-repeat: no-repeat;">
+            </div>
+            <div class="swiper-slide"
+                style="background-image: url(images/3.jpg); background-size: cover; background-repeat: no-repeat;">
+            </div>
+            <div class="swiper-slide"
+                style="background-image: url(images/4.jpg); background-size: cover; background-repeat: no-repeat;">
+            </div>
+            <div class="swiper-slide"
+                style="background-image: url(images/5.jpg); background-size: cover; background-repeat: no-repeat;">
+            </div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
@@ -199,7 +210,8 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center" style="font-size: 50px;">check out some Indian Brands</h2>
-                <p class="text-center" style="margin-bottom: 5%;" style="font-size: 30px;">Presenting to you the stalls of some of the best Atmanirbhar Indian Brands!</p>
+                <p class="text-center" style="margin-bottom: 5%;" style="font-size: 30px;">Presenting to you the stalls
+                    of some of the best Atmanirbhar Indian Brands!</p>
             </div>
             <div class="row photos">
                 <div class="col-sm-12 col-md-6 col-lg-6 item parent">
@@ -301,44 +313,86 @@
             </div>
         </div>
     </div>
-    <div class="row" style="padding: 50px;">
-        <div class="col-lg-3">
-            <div class="card">
-                <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%;">
-                <h1>Tailored Jeans</h1>
-                <p class="price">$19.99</p>
-                <p>Some text about the jeans..</p>
-                <p><button>Add to Cart</button></p>
-              </div>
+    <div class="prod-sec" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,1) 50% 50%); margin-top: 10%;">
+        <div class="prod-header">
+            <h2 style="color: black; text-align: center; text-transform: uppercase; color: white;">Bestselling Indian Products</h2>
         </div>
-        <div class="col-lg-3">
-            <div class="card">
-                <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%">
-                <h1>Tailored Jeans</h1>
-                <p class="price">$19.99</p>
-                <p>Some text about the jeans..</p>
-                <p><button>Add to Cart</button></p>
-              </div>
-        </div>
-        <div class="col-lg-3">
-            <div class="card">
-                <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%">
-                <h1>Tailored Jeans</h1>
-                <p class="price">$19.99</p>
-                <p>Some text about the jeans..</p>
-                <p><button>Add to Cart</button></p>
-              </div>
-        </div>
-        <div class="col-lg-3">
-            <div class="card">
-                <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%">
-                <h1>Tailored Jeans</h1>
-                <p class="price">$19.99</p>
-                <p>Some text about the jeans..</p>
-                <p><button>Add to Cart</button></p>
-              </div>
+        <div class="row" style="padding: 50px;">
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 10%;">
+                    <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%;">
+                    <h1>Boots</h1>
+                    <p class="price">Rs. 5,649</p>
+                    <p>Woodland</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/shoe3..jpeg" alt="Denim Jeans" style="width:100%">
+                    <h1>Rugged Boots</h1>
+                    <p class="price">Rs. 2,649</p>
+                    <p>Woodland</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/shoe2.jpg" alt="Denim Jeans" style="width:100%">
+                    <h1>Classic Boots</h1>
+                    <p class="price">Rs. 7,649</p>
+                    <p>Woodland</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/shoe4.jpg" alt="Denim Jeans" style="width:100%">
+                    <h1>Tailored Boots</h1>
+                    <p class="price">Rs. 11,649</p>
+                    <p>Woodland</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%;">
+                    <h1>Boots</h1>
+                    <p class="price">Rs. 5,649</p>
+                    <p>Woodland</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/shoe3..jpeg" alt="Denim Jeans" style="width:100%">
+                    <h1>Rugged Boots</h1>
+                    <p class="price">Rs. 2,649</p>
+                    <p>Woodland</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/shoe2.jpg" alt="Denim Jeans" style="width:100%">
+                    <h1>Classic Boots</h1>
+                    <p class="price">Rs. 7,649</p>
+                    <p>Woodland</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/shoe4.jpg" alt="Denim Jeans" style="width:100%">
+                    <h1>Tailored Boots</h1>
+                    <p class="price">Rs. 11,649</p>
+                    <p>Woodland</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
         </div>
     </div>
+
 
     <!-- <div class="spportal">
         <a href="https://www.subtlepixeldesigns.in">
