--- a/hackathon/login.html
+++ b/hackathon/login.html
@@ -37,37 +37,37 @@
         <div class="container-login100">
             <div class="wrap-login100">
                 <form class="login100-form validate-form">
-                    <span class="login100-form-title p-b-26">
-                        Welcome
+                    <span class="login100-form-title p-b-26" style="font-family: monreg;">
+                        Welcome to Shakedeal
                     </span>
                     <span class="login100-form-title p-b-48">
                         <i class="zmdi zmdi-font"></i>
                     </span>
                     <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
-                        <input class="input100" type="text" name="City" id="city_from">
+                        <input class="input100" type="text" name="City" id="city_from" style="font-family: monreg;">
                         <span class="focus-input100" data-placeholder="City"></span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="Enter password">
                         <span class="btn-show-pass">
                             <i class="zmdi zmdi-eye"></i>
                         </span>
-                        <input class="input100" type="text" name="cid" id="cid">
+                        <input class="input100" type="text" name="cid" id="cid" style="font-family: monreg;">
                         <span class="focus-input100" data-placeholder="CustomerID"></span>
                     </div>
                     </form>
                     <div class="container-login100-form-btn">
                         <div class="wrap-login100-form-btn">
                             <div class="login100-form-bgbtn"></div>
-                            <button class="login100-form-btn" onclick="validate();">
+                            <button class="login100-form-btn" onclick="validate();" style="font-family: monreg;">
                                 Login
                             </button>
                         </div>
                     </div>
                     <div class="text-center p-t-115">
-                        <span class="txt1">
+                        <span class="txt1" style="font-family: monreg;">
                             Don’t have an account?
                         </span>
-                        <a class="txt2" href="register.html">
+                        <a class="txt2" href="register.html" style="font-family: monreg; text-decoration: none;">
                             Sign Up
                         </a>
                     </div>
