--- a/hackathon/register.html
+++ b/hackathon/register.html
@@ -38,25 +38,25 @@
         <div class="container-login100">
             <div class="wrap-login100">
                 <form class="login100-form validate-form">
-                    <span class="login100-form-title p-b-26">
+                    <span class="login100-form-title p-b-26" style="font-family: monreg;">
                         Welcome to Shakedeal
                     </span>
                     <span class="login100-form-title p-b-48">
                         <i class="zmdi zmdi-font"></i>
                     </span>
                     <div class="wrap-input100 validate-input" data-validate="Enter Name">
-                        <input class="input100" type="text" name="name"  id="name">
+                        <input class="input100" type="text" name="name"  id="name" style="font-family: monreg;">
                         <span class="focus-input100" data-placeholder="Name"></span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
-                        <input class="input100" type="text" name="email" id="email">
+                        <input class="input100" type="text" name="email" id="email" style="font-family: monreg;">
                         <span class="focus-input100" data-placeholder="Email"></span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="Enter City">
                         <span class="btn-show-pass">
                             <i class="zmdi zmdi-eye"></i>
                         </span>
-                        <input class="input100" type="text" name="pass" id="city">
+                        <input class="input100" type="text" name="pass" id="city" style="font-family: monreg;">
                         <span class="focus-input100" data-placeholder="City"></span>
                     </div>
                 
@@ -64,17 +64,17 @@
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
-                        <button class="login100-form-btn" onclick="save_info()">
+                        <button class="login100-form-btn" onclick="save_info()" style="font-family: monreg;">
                             Sign Up
                         </button>
                     </div>
                 </div>
               
                     <div class="text-center p-t-115">
-                        <span class="txt1">
+                        <span class="txt1" style="font-family: monreg;">
                             Already have an account?
                         </span>
-                        <a class="txt2" href="login.html">
+                        <a class="txt2" href="login.html" style="font-family: monreg; text-decoration: none;">
                             Login
                         </a>
                     </div>
