--- a/hackathon/products/brand.html
+++ b/hackathon/products/brand.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Woodland</title>
+    <title>Shakedeal - Woodland Brand Store</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -119,7 +119,7 @@
         <div class="row no-gutters slider-text align-items-center justify-content-center">
           <div class="col-md-8 ftco-animate d-flex align-items-end">
           	<div class="text w-100 text-center">
-	            <h1 class="mb-4">Good <span>Shoes</span> Make for Good <span>Journeys</span>.</h1>
+	            <h1 class="mb-4">The <span>Shakedeal Woodland</span> Brand <span>Store</span>.</h1>
 	            <p><a href="#" class="btn btn-primary py-2 px-4">Shop Now</a> <a href="#" class="btn btn-white btn-outline-white py-2 px-4">Read more</a></p>
             </div>
           </div>
