--- a/hackathon/index.html
+++ b/hackathon/index.html
@@ -21,6 +21,7 @@
 
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <link rel="icon" href="images/shakelogo.png" type="image/gif" sizes="16x16">
     <title>Partners</title>
 </head>
 
@@ -199,10 +200,10 @@
             </div>
         </div>
         <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-pagination"></div> -->
         <!-- Add Arrows -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next" style="color: white;"></div>
+        <div class="swiper-button-prev" style="color: white;"></div>
     </div>
 
 
@@ -329,10 +330,46 @@
             </div>
             <div class="col-lg-3 col-sm-6 col-md-6">
                 <div class="card" style="margin-bottom: 5%;">
-                    <img src="products/images/shoe3..jpeg" alt="Denim Jeans" style="width:100%">
-                    <h1>Rugged Boots</h1>
+                    <img src="products/images/a4.PNG" alt="Denim Jeans" style="width:100%">
+                    <h1>A4 Paper</h1>
+                    <p class="price">Rs. 1,049</p>
+                    <p>JK</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/drill.PNG" alt="Denim Jeans" style="width:100%">
+                    <h1>Drilling Machine</h1>
+                    <p class="price">Rs. 3,649</p>
+                    <p>Tiger</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/ekg.PNG" alt="Denim Jeans" style="width:100%">
+                    <h1>Pulse Oximeter</h1>
                     <p class="price">Rs. 2,649</p>
-                    <p>Woodland</p>
+                    <p>EKG</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/mask.PNG" alt="Denim Jeans" style="width:100%;">
+                    <h1>Mask</h1>
+                    <p class="price">Rs. 949</p>
+                    <p>Aegon</p>
+                    <p><button>Add to Cart</button></p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-md-6">
+                <div class="card" style="margin-bottom: 5%;">
+                    <img src="products/images/measure.PNG" alt="Denim Jeans" style="width:100%">
+                    <h1>Measuring Tool</h1>
+                    <p class="price">Rs. 2,649</p>
+                    <p>Karam</p>
                     <p><button>Add to Cart</button></p>
                 </div>
             </div>
@@ -347,46 +384,10 @@
             </div>
             <div class="col-lg-3 col-sm-6 col-md-6">
                 <div class="card" style="margin-bottom: 5%;">
-                    <img src="products/images/shoe4.jpg" alt="Denim Jeans" style="width:100%">
-                    <h1>Tailored Boots</h1>
-                    <p class="price">Rs. 11,649</p>
-                    <p>Woodland</p>
-                    <p><button>Add to Cart</button></p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6 col-md-6">
-                <div class="card" style="margin-bottom: 5%;">
-                    <img src="products/images/shoe1.jpg" alt="Denim Jeans" style="width:100%;">
-                    <h1>Boots</h1>
-                    <p class="price">Rs. 5,649</p>
-                    <p>Woodland</p>
-                    <p><button>Add to Cart</button></p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6 col-md-6">
-                <div class="card" style="margin-bottom: 5%;">
-                    <img src="products/images/shoe3..jpeg" alt="Denim Jeans" style="width:100%">
-                    <h1>Rugged Boots</h1>
-                    <p class="price">Rs. 2,649</p>
-                    <p>Woodland</p>
-                    <p><button>Add to Cart</button></p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6 col-md-6">
-                <div class="card" style="margin-bottom: 5%;">
-                    <img src="products/images/shoe2.jpg" alt="Denim Jeans" style="width:100%">
-                    <h1>Classic Boots</h1>
-                    <p class="price">Rs. 7,649</p>
-                    <p>Woodland</p>
-                    <p><button>Add to Cart</button></p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6 col-md-6">
-                <div class="card" style="margin-bottom: 5%;">
-                    <img src="products/images/shoe4.jpg" alt="Denim Jeans" style="width:100%">
-                    <h1>Tailored Boots</h1>
-                    <p class="price">Rs. 11,649</p>
-                    <p>Woodland</p>
+                    <img src="products/images/pencil.PNG" alt="Denim Jeans" style="width:100%">
+                    <h1>HB Pencil</h1>
+                    <p class="price">Rs. 1,649</p>
+                    <p>Apsara</p>
                     <p><button>Add to Cart</button></p>
                 </div>
             </div>
